# indi-rpi-radiotelescope

./: CMakeLists.txt  README.md  axis.cpp  axis.h  doxyfile  encoder.cpp  encodertest.cpp  gpioif.h  motordriver.cpp  motordriver.h  pirt.cpp  pirt.h
config/: CMakeLists.txt  indiserver.service  ratsche.service  rt_indi_to_mqtt.service  rt_mqtt_to_indi.service  rt_mqtt_to_ratsche.service  rt_ratsche_to_mqtt.service
encoders/: encoder_read.cpp  encoder_read_pigpiod.cpp
libindi/drivers/pirt/: CMakeLists.txt  axis.cpp  axis.h  encoder.cpp  encoder.h  encoders.cpp  gpioif.cpp  gpioif.h  motordriver.cpp  motordriver.h  pirt.cpp  pirt.h  test.cpp
libindi/drivers/radiotelescope_vstw/: encoders.cpp  encoders.h  gpioif.cpp  gpioif.h  simplescope.h  test.cpp
macros/: CMakeLists.txt  indi_read_pos  plot_equscan.gpl  plot_horscan.gpl  rt_ads1115_measurement  rt_ads1115_measurement.sh  rt_indi_to_mqtt  rt_mqtt_to_indi  rt_mqtt_to_ratsche  rt_ratsche_to_mqtt  rt_readpos_converter  rt_scan_equ  rt_scan_equ.sh  rt_scan_hor  rt_scan_hor.sh  rt_tracking  rt_transitscan
pirt/: CMakeLists.txt  README.md  ads1115.cpp  ads1115.h  ads1115_measurement.cpp  ads1115_measurement.h  axis.cpp  axis.h  encoder.cpp  encoder.h  encodertest.cpp  gpioif.cpp  gpioif.h  i2cdevice.cpp  i2cdevice.h  indi_pirt.xml.cmake  motordriver.cpp  motordriver.h  pirt.cpp  pirt.h  rpi_temperatures.cpp  rpi_temperatures.h  utility.h  voltage_monitor.cpp  voltage_monitor.h
ratsche/: CMakeLists.txt  README.md  astro.cpp  astro.h  basic.cpp  basic.h  dummy_task  ratsche_main.cpp  ratsche_message.h  rttask.cpp  rttask.h  time.cpp  time.h
watchdog/: RT300_Watchdog.ino
watchdog/RT300_Watchdog_MQTT/: RT300_Watchdog_MQTT.ino
watchdog/libraries/Ethernet/src/: socket.cpp
